--- a/app/src/main/res/layout/fragment_student_front_page.xml
+++ b/app/src/main/res/layout/fragment_student_front_page.xml
@@ -53,7 +53,8 @@
         android:id="@+id/sname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/uoft_blue"
+        android:background="@drawable/blue_rounded_edittext"
+        android:paddingRight="15dp"
         android:text="Name"
         android:textColor="@color/white"
         android:textSize="34sp"
