--- a/app/src/main/res/layout/framgent_student_academic_history.xml
+++ b/app/src/main/res/layout/framgent_student_academic_history.xml
@@ -47,8 +47,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_course_taken"
         android:layout_width="416dp"
-        android:layout_height="479dp"
+        android:layout_height="0dp"
         android:layout_marginTop="130dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,11 +63,12 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="53dp"
-        android:layout_height="53dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
-        app:srcCompat="@drawable/add_button" />
+        app:srcCompat="@drawable/paper_plus" />
 </androidx.constraintlayout.widget.ConstraintLayout>
