--- a/app/src/main/res/layout/fragment_admin_login_page.xml
+++ b/app/src/main/res/layout/fragment_admin_login_page.xml
@@ -106,7 +106,7 @@
         android:id="@+id/Arem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remember ME"
+        android:text="Remember Me"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:buttonTint="@color/button_green"
