--- a/app/src/main/res/layout/fragment_student_course_planner.xml
+++ b/app/src/main/res/layout/fragment_student_course_planner.xml
@@ -86,7 +86,7 @@
         android:id="@+id/textView"
         android:layout_width="181dp"
         android:layout_height="24dp"
-        android:text="Enter Desired Course Code:"
+        android:text="Enter Desired Course Codes:"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
