Fixed bug where removed courses were kept as prerequisites

--- a/app/src/main/res/layout/activity_admin_course_view.xml
+++ b/app/src/main/res/layout/activity_admin_course_view.xml
@@ -25,6 +25,7 @@
             android:background="@drawable/grey_rounded_edittext"
             android:fontFamily="sans-serif"
             android:gravity="center"
+            android:paddingRight="15dp"
             android:text="@string/course_offering"
             android:textColor="@color/uoft_blue"
             android:textSize="20sp"
