--- a/app/src/main/res/layout/fragment_student_course_planner.xml
+++ b/app/src/main/res/layout/fragment_student_course_planner.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/grey_rounded_edittext"
         android:fontFamily="sans-serif"
         android:gravity="center"
+        android:paddingRight="15dp"
         android:text="Course Planner"
         android:textColor="@color/uoft_blue"
         android:textSize="20sp"
