--- a/app/src/main/res/layout/fragment_student_course_view.xml
+++ b/app/src/main/res/layout/fragment_student_course_view.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="45dp"
         android:background="@drawable/grey_rounded_edittext"
         android:gravity="center"
+        android:paddingRight="15dp"
         android:text="@string/course_offering"
         android:textColor="@color/uoft_blue"
         android:textSize="20sp"
