--- a/app/src/main/res/layout/framgent_student_academic_history.xml
+++ b/app/src/main/res/layout/framgent_student_academic_history.xml
@@ -12,6 +12,7 @@
         android:layout_height="44.5dp"
         android:layout_marginTop="120dp"
         android:background="@drawable/blue_rounded_edittext"
+        android:paddingTop="8dp"
         android:text="@string/course_taken"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -27,6 +28,7 @@
         android:layout_marginTop="45dp"
         android:background="@drawable/grey_rounded_edittext"
         android:gravity="center"
+        android:paddingRight="15dp"
         android:text="@string/academic_history"
         android:textColor="@color/uoft_blue"
         android:textSize="20sp"
